# catfriend

./: .gemspec  .gitignore  CMakeLists.txt  ImapClient.hpp  LICENSE  Makefile  README.markdown  catfriend.example  catfriend.gemspec  catfriend.py  catfriend.sample.config
cpp/: Makefile  client.hpp  test.cpp
lib/catfriend/: dbus.rb  filetokenstack.rb  imap.rb  libnotify.rb  net_imap_exchange_patch.rb  notify.rb  server.rb  thread.rb
python/: catfriend.py
test/: CMakeLists.txt  Makefile  dbus.cpp  imap.cpp
